--- a/Projects/Stripe.Onboarding.App/Views/Shared/_Layout.cshtml
+++ b/Projects/Stripe.Onboarding.App/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
 
     <!-- PWA -->
     <link rel="manifest" href="~/src/manifest.json" />
+
+    <script src="https://js.stripe.com/v3/"></script>
 </head>
 
 <body style="background-color: min-height: 100%; height: 100vh;">
