--- a/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Cart/EmbeddedForm.cshtml
+++ b/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Cart/EmbeddedForm.cshtml
@@ -4,19 +4,13 @@
 @model Stripe.Onboarding.Features.Cart.Models.Views.CheckoutPage
 
 <div>checkout</div>
+ 
+<div id="checkout">
+    <!-- Checkout will insert the payment form here -->
+</div>
 
-<!--Card-->
 <article class="dense">
-    <header>
-        <nav>
-            Your cart
-        </nav>
-    </header>
-    <div>
-        <form action="/cart/CheckoutHostedPage" method="POST">
-            <button type="submit" id="checkout-button">Stripe Hosted Checkout</button>
-        </form>
-    </div>
+    
     <footer>
         <nav>
             <ul>
@@ -27,3 +21,30 @@
         </nav>
     </footer>
 </article>
+
+<script>
+    // This is a public sample test API key.
+    // Don’t submit any personally identifiable information in requests made with this key.
+    // Sign in to see your own test API key embedded in code samples.
+    const stripe = Stripe('@Model.PublicKey');
+
+    initialize();
+
+    // Create a Checkout Session
+    async function initialize() {
+        const fetchClientSecret = async () => {
+            const response = await fetch("@Model.PostbackUrl", {
+                method: "POST",
+            });
+            const { clientSecret } = await response.json();
+            return clientSecret;
+        };
+
+        const checkout = await stripe.initEmbeddedCheckout({
+            fetchClientSecret,
+        });
+
+        // Mount Checkout
+        checkout.mount('#checkout');
+    }
+</script>
