#dev [Fixed] - embedded payment for not adding the sessionUrl [added] - vustom intent flow

--- a/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Cart/EmbeddedForm.cshtml
+++ b/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Cart/EmbeddedForm.cshtml
@@ -3,6 +3,40 @@
 @using Microsoft.AspNetCore.Http
 @model Stripe.Onboarding.Features.Cart.Models.Views.CheckoutPage
 
+<script defer>
+    // This is a public sample test API key.
+    // Don’t submit any personally identifiable information in requests made with this key.
+    // Sign in to see your own test API key embedded in code samples.
+    try {
+        const stripe = Stripe('@Model.PublicKey');
+
+        initialize();
+
+        // Create a Checkout Session
+        async function initialize() {
+            const fetchClientSecret = async () => {
+                const response = await fetch("@Model.PostbackUrl", {
+                    method: "POST",
+                });
+                const { clientSecret } = await response.json();
+                return clientSecret;
+            };
+            var key = await fetchClientSecret();
+
+            const checkout = await stripe.initEmbeddedCheckout({
+                fetchClientSecret,
+            });
+
+            // Mount Checkout
+            checkout.mount('#checkout');
+        }
+    }
+    catch(e){
+
+    }
+    
+</script>
+
 <div>checkout</div>
  
 <div id="checkout">
@@ -21,30 +55,3 @@
         </nav>
     </footer>
 </article>
-
-<script>
-    // This is a public sample test API key.
-    // Don’t submit any personally identifiable information in requests made with this key.
-    // Sign in to see your own test API key embedded in code samples.
-    const stripe = Stripe('@Model.PublicKey');
-
-    initialize();
-
-    // Create a Checkout Session
-    async function initialize() {
-        const fetchClientSecret = async () => {
-            const response = await fetch("@Model.PostbackUrl", {
-                method: "POST",
-            });
-            const { clientSecret } = await response.json();
-            return clientSecret;
-        };
-
-        const checkout = await stripe.initEmbeddedCheckout({
-            fetchClientSecret,
-        });
-
-        // Mount Checkout
-        checkout.mount('#checkout');
-    }
-</script>
