--- a/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Checkout/CustomFlow.cshtml
+++ b/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Checkout/CustomFlow.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Collections.Generic
 @using System.Linq
 @using Microsoft.AspNetCore.Http
-@model Stripe.Onboarding.Features.Cart.Models.Views.CheckoutPage
+@model Stripe.Onboarding.Features.Cart.Models.Views.CustomFlowPage
 
 @{
     var cartId = Model.Cart != null ? @Model.Cart.Id.ToString() : "";
@@ -15,9 +15,11 @@
         clientSecret: null,
         message: '',
         complete: false,
+        loading: false,
         stripe: {},
         elements: null,
         async init() {
+            this.loading = true;
             this.stripe = Stripe('@Model.PublicKey');
             const clientSecret = new URLSearchParams(window.location.search).get('payment_intent_client_secret');
             this.clientSecret  = clientSecret;
@@ -27,6 +29,7 @@
             else {
                 await this.initialize();
             }
+            this.loading = false;
         },
         async initialize() {
             const response = await fetch('@Model.PostbackUrl', {
@@ -35,8 +38,7 @@
                 body: JSON.stringify({ cartId: '@cartId' }),
             });
             const { clientSecret } = await response.json();
-            console.log('init clientSecret');
-            console.log(clientSecret);
+            
             const appearance = {
                 theme: 'stripe',
             };
@@ -66,9 +68,9 @@
             // be redirected to an intermediate site first to authorize the payment, then
             // redirected to the `return_url`.
             if (error.type === 'card_error' || error.type === 'validation_error') {
-                showMessage(error.message);
+                this.message = error.message;
             } else {
-                showMessage('An unexpected error occurred.');
+                this.message = 'An unexpected error occurred.';
             }
             this.loading = false;
         },
@@ -77,8 +79,13 @@
             let message = '';
             switch (paymentIntent.status) {
                 case 'succeeded':
+                    const self = this;
                     message = 'Payment succeeded!';
                     this.complete = true;
+                    const order = await this.createOrder(paymentIntent);
+                    setTimeout(function() { 
+                        self.redirectToSuccessPage(order);
+                    }, 500);
                     //create order
                     break;
                 case 'processing':
@@ -92,10 +99,17 @@
                     break;
             }
             this.message = message;
-        }, 
-        return() {
-            window.location.replace('/home');
-        } 
+        },
+        async createOrder(paymentIntent) {
+            return await this.$fetch.POST('@Model.OrderApiPostbackUrl', {
+                userId: '@Model.UserId',
+                cartId: '@Model.Cart.Id',
+                paymentIntentId: paymentIntent.id,
+            })
+        },
+        redirectToSuccessPage(order) {
+            window.location.replace('@Model.SuccessUrl?oid='+order.id)
+        }
     }">
     <header>
         <nav>
@@ -121,8 +135,8 @@
         <nav>
             <ul>
                 <li>
-                    <button x-show="!complete" @@click="return">Cancel</button>
-                    <button x-show="complete" @@click="return">Return</button>
+                    <button x-show="!complete" @@click="window.location.replace('/home');">Cancel</button>
+                    <button x-show="complete" @@click="window.location.replace('/home');">Return</button>
                 </li>
             </ul>
         </nav>
