--- a/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Checkout/EmbeddedForm.cshtml
+++ b/Features/Cart/Stripe.Onboarding.Features.Cart/Views/Checkout/EmbeddedForm.cshtml
@@ -66,7 +66,13 @@
     
 </script>
 
-<div>checkout</div>
+<nav>
+    <header>
+        <hgroup>
+            <h1>Checkout</h1>
+        </hgroup>
+    </header>
+</nav>
  
 <div id="checkout">
     <!-- Checkout will insert the payment form here -->
